--- a/css/main.css
+++ b/css/main.css
@@ -213,7 +213,7 @@ main,
     margin: 0.5 0;
   }
   .header__logo {
-    width: 50px;
+    width: 20%;
     height: auto;
     margin: 0 0 0.5em 0;
     float: left;
