--- a/css/main.css
+++ b/css/main.css
@@ -27,7 +27,8 @@ body {
 }
 
 .header__logo {
-  width: 100px;
+  max-width: 100px;
+  width: 20%;
   height: auto;
   margin: 0 0 1em 0;
   float: left;
@@ -213,7 +214,6 @@ main,
     margin: 0.5 0;
   }
   .header__logo {
-    width: 20%;
     height: auto;
     margin: 0 0 0.5em 0;
     float: left;
