--- a/css/main.css
+++ b/css/main.css
@@ -12,7 +12,7 @@ body {
   font-weight: 300;
   font-size: 1em;
   line-height: 1.2em;
-  color: #424242;
+  color: #5d614e;
 }
 
 /*
@@ -28,7 +28,7 @@ body {
 
 .header__logo {
   max-width: 100px;
-  width: 20%;
+  width: 10%;
   height: auto;
   margin: 0 0 1em 0;
   float: left;
@@ -39,11 +39,11 @@ body {
   margin: auto;
   text-align: right;
   text-transform: uppercase;
-  color: #d3d3d3;
+  color: #5d614e;
 }
 
 .header__inner h1 {
-  font-weight: 300;
+  font-weight: 100;
 }
 
 .header__inner h4 {
@@ -80,9 +80,10 @@ section:last-of-type {
 }
 
 section h2 {
+  margin-left: 10px;
   font-weight: 300;
   text-align: left;
-  color: #d3d3d3;
+  color: #acacac;
 }
 
 section p {
@@ -130,18 +131,20 @@ figure {
 
 figcaption {
   font-size: 1em;
+  font-weight: 600;
   text-transform: uppercase;
   margin: 0.5em auto;
 }
 
 a {
   text-decoration: none;
-  color: #d3d3d3;
+  color: #5d614e;
+  font-size: 12px;
 }
 
 a:hover {
   text-decoration: underline;
-  color: blue;
+  color: 176bec;
 }
 
 /*
@@ -201,6 +204,12 @@ main,
   .header__inner h4 {
     font-size: 1.4em;
   }
+  .header__logo {
+    width: 15%;
+    height: auto;
+    margin: 0 0 0.5em 2%;
+    float: left;
+  }
 }
 
 @media screen and (min-width: 501px) {
@@ -212,11 +221,6 @@ main,
 @media screen and (max-width: 500px) {
   .header {
     margin: 0.5 0;
-  }
-  .header__logo {
-    height: auto;
-    margin: 0 0 0.5em 0;
-    float: left;
   }
   .header__inner h1 {
     font-size: 1.5em;
