--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,11 @@
+/* zocial */
+[class*="zocial-"]:before {
+  font-family: 'zocial', sans-serif;
+  text-shadow: 3px 3px 3px #aaa;
+  width: 20vw;
+  color: #176bec;
+}
+
 body, html {
   margin: 0;
   padding: 0;
@@ -144,7 +152,7 @@ a {
 
 a:hover {
   text-decoration: underline;
-  color: 176bec;
+  color: #176bec;
 }
 
 /*
@@ -154,7 +162,37 @@ a:hover {
  */
 
 footer {
- margin: 1em auto;
+ margin: 2em auto 1em auto;
+ border-top: 1px solid #d3d3d3;
+}
+
+footer ul {
+
+}
+
+footer li {
+  display: inline-block;
+  margin-right: 30px;
+  padding: 20px;;
+}
+
+footer li:last-oft-ype {
+  margin-right: 0;
+}
+
+footer li a {
+  font-size: 1.2em;
+}
+
+footer li a:hover {
+  text-decoration: none;
+
+  /* opacity */
+  opacity: 0.5;
+  transition: opacity .2s ease-out;
+  -moz-transition: opacity .2s ease-out;
+  -webkit-transition: opacity .2s ease-out;
+  -o-transition: opacity .2s ease-out;
 }
 
 /*
